fix link iframe

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </header>
 
     <div class="z-10 mt-10 flex items-start gap-4">
-        <iframe src="https://player.twitch.tv/?channel=bhaaskara&parent=www.bhaskara.com.br" frameborder="0" allowfullscreen="true" scrolling="no" height="720" width="1280"></iframe>
+        <iframe src="https://player.twitch.tv/?channel=bhaaskara&parent=bhaskara.com.br" frameborder="0" allowfullscreen="true" scrolling="no" height="720" width="1280"></iframe>
         <iframe
         id="chat_embed"
-        src="https://www.twitch.tv/embed/bhaaskara/chat?parent=www.bhaskara.com.br"
+        src="https://www.twitch.tv/embed/bhaaskara/chat?parent=bhaskara.com.br"
         height="720"
         width="350"></iframe>
     </div>
