--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="bg-black/50 backdrop-blur-sm text-gray-200 py-3 w-fit h-fit mx-auto rounded-lg mt-4">
       <nav class="container mx-auto px-4 flex items-center justify-between">
         <div class="space-x-10">
-          <a href="https://instagram.com" target="_blank" class="hover:text-gray-500">
+          <a href="https://www.instagram.com/bhaskara.com.br?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="https://youtube.com" target="_blank" class="hover:text-gray-500">
