--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página com Tailwind</title>
+    <title>Bhaskara :D</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
