--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
           <a href="https://www.instagram.com/bhaskara.com.br?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://youtube.com" target="_blank" class="hover:text-gray-500">
+          <a href="https://www.youtube.com/@Bhaaskara" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-youtube"></i>
           </a>
-          <a href="https://tiktok.com" target="_blank" class="hover:text-gray-500">
+          <a href="https://www.tiktok.com/@bhaskara.com.br" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-tiktok"></i>
           </a>
-          <a href="https://facebook.com" target="_blank" class="hover:text-gray-500">
+          <!--<a href="https://facebook.com" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-facebook"></i>
-          </a>
+          </a> -->
         </div>
       </nav>
     </header>
