--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
           <a href="https://www.tiktok.com/@bhaskara.com.br" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-tiktok"></i>
           </a>
-          <!--<a href="https://facebook.com" target="_blank" class="hover:text-gray-500">
+          <a href="https://www.facebook.com/profile.php?id=61573654418193" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-facebook"></i>
-          </a> -->
+          </a> 
+
+          <!-- Comentario -->
         </div>
       </nav>
     </header>
