--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bhaskara :D</title>
+    <title>Bhaskara Lives</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -35,8 +35,7 @@
         </div>
       </nav>
     </header>
-
-    <div class="z-10 mt-10 flex flex-col flex-wrap items-start justify-center gap-4 h-full lg:flex-row overflow-y-auto">
+        <div class="z-10 mt-10 flex flex-col flex-wrap items-start justify-center gap-4 h-full lg:flex-row overflow-y-auto">
         <iframe class="w-full aspect-video 2xl:w-[1280px] 2xl:h-[720px] bg-black/50 backdrop-blur-sm rounded-lg" src="https://player.twitch.tv/?channel=bhaaskara&parent=bhaskara.com.br" frameborder="0" allowfullscreen="true" scrolling="no"></iframe>
         <iframe
         class="w-full h-[500px] 2xl:w-[350px] 2xl:h-[720px] bg-black/50 backdrop-blur-sm rounded-lg"
