--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           </a>
           <a href="https://www.facebook.com/profile.php?id=61573654418193" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-facebook"></i>
-          </a> 
+          </a>
+          <a href="https://www.twitch.tv/bhaaskara" target="_blank" class="hover:text-gray-500">
+            <i class="fab fa-twitch"></i>
+          </a>
 
           <!-- Comentario -->
         </div>
