--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <header class="bg-black/50 backdrop-blur-sm text-gray-200 py-3 w-fit h-fit mx-auto rounded-lg mt-4">
       <nav class="container mx-auto px-4 flex items-center justify-between">
         <div class="space-x-10">
+          <a href="https://www.twitch.tv/bhaaskara" target="_blank" class="hover:text-gray-500">
+            <i class="fab fa-twitch"></i>
+          </a>
           <a href="https://www.instagram.com/bhaskara.com.br?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-instagram"></i>
           </a>
@@ -29,9 +32,6 @@
           </a>
           <a href="https://www.facebook.com/profile.php?id=61573654418193" target="_blank" class="hover:text-gray-500">
             <i class="fab fa-facebook"></i>
-          </a>
-          <a href="https://www.twitch.tv/bhaaskara" target="_blank" class="hover:text-gray-500">
-            <i class="fab fa-twitch"></i>
           </a>
 
           <!-- Comentario -->
@@ -45,5 +45,12 @@
         id="chat_embed"
         src="https://www.twitch.tv/embed/bhaaskara/chat?parent=bhaskara.com.br"></iframe>
     </div>
+    <header class="bg-black/50 backdrop-blur-sm text-gray-200 py-3 w-fit h-fit mx-auto rounded-lg mt-4">
+      <nav class="container mx-auto px-4 flex items-center justify-between">
+        <div class="space-x-10">
+          contato@bhaskara.com.br
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
